--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=shop
 
 
-server.port=80
+server.port=8080
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
