--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -5,8 +5,11 @@ server.port=8080
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
-spring.datasource.username=root
+#develop
+#spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
+#deploy
+spring.datasource.url=jdbc:mysql://13.125.249.129:3306/shop?serverTimezone=UTC
+spring.datasource.username=shop
 spring.datasource.password=1234
 
 
@@ -15,7 +18,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
