--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -31,7 +31,11 @@ spring.servlet.multipart.maxFileSize=20MB
 
 spring.servlet.multipart.maxRequestSize=100MB
 
-itemImgLocation=C:/shop/item
+#develop
+#itemImgLocation=C:/shop/item
+#uploadPath=file:///C:/shop/
 
-uploadPath=file:///C:/shop/
+#deploy
+itemImgLocation=/home/ec2-user/shop/item
+uploadPath=file:///home/ec2-user/shop/
 
