--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -5,11 +5,15 @@ server.port=8080
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #develop
-#spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
+spring.datasource.username=root
+
 #deploy
-spring.datasource.url=jdbc:mysql://13.125.249.129:3306/shop?serverTimezone=UTC
-spring.datasource.username=shop
+#spring.datasource.url=jdbc:mysql://13.125.249.129:3306/shop?serverTimezone=UTC
+#spring.datasource.username=shop
+
 spring.datasource.password=1234
 
 
@@ -18,7 +22,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
@@ -32,10 +36,10 @@ spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=100MB
 
 #develop
-#itemImgLocation=C:/shop/item
-#uploadPath=file:///C:/shop/
+itemImgLocation=C:/shop/item
+uploadPath=file:///C:/shop/
 
 #deploy
-itemImgLocation=/home/ec2-user/shop/item
-uploadPath=file:///home/ec2-user/shop/
+#itemImgLocation=/home/ec2-user/shop/item
+#uploadPath=file:///home/ec2-user/shop/
 
