--- a/boot-demo/src/main/resources/application.yml
+++ b/boot-demo/src/main/resources/application.yml
@@ -1,2 +1,30 @@
 server:
   port: 8080
+
+#develop
+frontDomain: "http://localhost:3000"
+dbDomain: "mysql://localhost:3306"
+dbUser: "root"
+dbPasswd: "1234"
+
+#deploy
+#frontDomain: "http://[공인IP]:3000"
+
+spring:
+  datasource:
+    url: jdbc:${dbDomain}/reactdemo?useSSL=false&autoReconnect=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Seoul
+    username: ${dbUser}
+    password: ${dbPasswd}
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+
+jwt:
+  issuer: reactdemo
+  secret-key: jwtSecretKey
