--- a/boot-demo/src/main/resources/application.yml
+++ b/boot-demo/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         format_sql: true
